@@ -1,5 +1,5 @@
 name    = AnyEvent-HTTP-LWP-UserAgent
-version = 0.07
+version = 0.08
 author  = Yury Zavarin <yury.zavarin@gmail.com>
 license = Perl_5
 copyright_holder = Yury Zavarin
